--- a/Nightshift Extension/stackoverflow-dark.css
+++ b/Nightshift Extension/stackoverflow-dark.css
@@ -115,7 +115,7 @@
         border-color: var(--border-color) !important;
     }
 
-    /* Question page */
+    /* Question page */*/
     
     .top-bar {
         background-color: var(--bg-dark-color) !important;
